Updated .gitignore with .dmp files

--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# IDE files and miscelanious
+# IDE and OS files
 .idea
 .fleet
 .DS_Store
+
+# Data files
+*.dmp
