--- a/Lab_2/Dockerfile
+++ b/Lab_2/Dockerfile
@@ -5,5 +5,4 @@ WORKDIR /Lab_2
 COPY . .
 
 RUN pip install -r requirements.txt
-CMD ["python", "./Task_1/main.py"]
-CMD ["python", "./Task_2/main.py"]
+CMD python ./Task_2/main.py
