--- a/Lab_2/docker-compose.yaml
+++ b/Lab_2/docker-compose.yaml
@@ -1,22 +1,18 @@
 version: "1"
 
-volumes:
-  t1data:
-  t2data:
-
 services:
   task1:
-    build: ../Lab_1/Task_1
+    build: Task_1/
     restart: always
     volumes:
-      - t1data:/Users/mishashkarubski/PythonLabs/Lab_2/Task_1/public
+      - /Users/mishashkarubski/PythonLabs/Lab_2/Task_1/public:/Task_1/public
     stdin_open: true
     tty: true
 
   task2:
-    build: ../Lab_1/Task_2
+    build: Task_2/
     restart: always
     volumes:
-      - t2data:/Users/mishashkarubski/PythonLabs/Lab_2/Task_2/data
+      - /Users/mishashkarubski/PythonLabs/Lab_2/Task_2/data:/Task_2/data
     stdin_open: true
     tty: true
